--- a/public/css/app.css
+++ b/public/css/app.css
@@ -67,3 +67,54 @@ body > .container {
     background-color: var(--darker-vicimus-blue);
     color: #FFF;
 }
+
+nav ul.pagination {
+    --bs-pagination-color: var(--vicimus-blue);
+    --bs-pagination-active-bg: var(--vicimus-blue);
+    --bs-pagination-active-border-color: var(--vicimus-blue);
+    --bs-pagination-hover-color: var(--vicimus-blue);
+    --bs-pagination-padding-x: 0.5rem;
+    --bs-pagination-padding-y: 0.25rem;
+    --bs-pagination-font-size: 0.875rem;
+    --bs-pagination-border-radius: 0.375rem;
+    margin: 0;
+}
+
+.kycn-table.sm-table {
+    font-size: 14px;
+}
+
+.kycn-table th,
+.kycn-table td {
+    padding: 0.5rem;
+}
+
+.kycn-table th {
+    background-color: #FFF;
+    white-space: nowrap;
+}
+
+.kycn-table th:not(:last-child) {
+    border-right: thin solid var(--bs-border-color);
+}
+
+.kycn-table tbody tr td:not(:last-child) {
+    border-right: thin solid var(--bs-border-color);
+}
+
+.table-dealer-logo {
+    max-height: 34px;
+    max-width: 180px;
+}
+
+@media (width >= 1200px) {
+    .kycn-table:not(.sm-table) th,
+    .kycn-table:not(.sm-table) td {
+        padding: 1rem;
+    }
+
+    .kycn-table.sm-table th,
+    .kycn-table.sm-table td {
+        padding: 0.5rem 1rem;
+    }
+}
