--- a/public/css/app.css
+++ b/public/css/app.css
@@ -117,6 +117,16 @@ nav ul.pagination {
     max-width: 180px;
 }
 
+.dealer-form-logo {
+    max-height: 100px;
+    max-width: 500px;
+}
+
+.form-check-input:checked {
+    background-color: var(--vicimus-blue);
+    border-color: var(--vicimus-blue);
+}
+
 @media (width >= 1200px) {
     .kycn-table:not(.sm-table) th,
     .kycn-table:not(.sm-table) td {
